examples/type_system/failing/59_strict_module_public_effect_missing_with.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/59_strict_module_public_effect_missing_with.flx
// error[E400]: Missing Ambient Effect
//
// Call to `print` requires effect `Console` in this function signature.
//
//   examples/type_system/failing/59_strict_module_public_effect_missing_with.flx:22:5
//    |
// 22 |     print(msg)
//    |     ^^^^^^^^^^
//    |     ---------- effectful call occurs here
//
// Hint:
//   Add `with Console` to the enclosing function.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E400

public fn log(msg: String) -> Unit {
    print(msg)
}

fn main() -> Unit {
}
